fixed problems with mobile nav menu, refactored javascript code for toggle menu, fixed header welcome positioning on mobile devices

--- a/src/styles/blocks/_article.scss
+++ b/src/styles/blocks/_article.scss
@@ -11,7 +11,7 @@
 
   &__image {
     @include onTablet {
-      justify-self: center
+      justify-self: center;
     }
   }
 
@@ -31,7 +31,7 @@
 
     @include onMobile {
       @include mobileH2;
-      text-align: center
+      text-align: center;
     }
   }
 
