--- a/src/styles/blocks/_benefits.scss
+++ b/src/styles/blocks/_benefits.scss
@@ -17,6 +17,7 @@
     }
 
     @include onMobile {
+      grid-template-columns: 1fr;
       margin-bottom: 110px;
     }
   }
