--- a/src/styles/blocks/_contact.scss
+++ b/src/styles/blocks/_contact.scss
@@ -27,7 +27,7 @@
     @include desktopH2;
 
     @include onTablet {
-      @include tabletH2
+      @include tabletH2;
     }
   }
 
