--- a/src/styles/blocks/_features.scss
+++ b/src/styles/blocks/_features.scss
@@ -53,6 +53,11 @@
     grid-template-columns: 1fr 1fr;
     gap: 60px 130px;
 
+    @include onTablet {
+      display: flex;
+      flex-direction: column;
+    }
+
     // @include onTablet {
     //   &--slider-line {
     //     display: flex;
@@ -66,9 +71,9 @@
   &__buttons {
     display: none;
 
-    @include onTablet {
-      display: inline-block;
-    }
+    // @include onTablet {
+    //   display: inline-block;
+    // }
   }
 
   // &__article-content {
@@ -83,7 +88,7 @@
     color: $color-scobeloff;
     margin-bottom: 30px;
 
-    @include onTablet{
+    @include onTablet {
       @include tabletH3;
     }
   }
