--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -3,6 +3,9 @@
 
   &__container {
     @include container;
+
+    display: flex;
+    flex-direction: column;
   }
 
   &__top {
@@ -20,6 +23,14 @@
     }
   }
 
+  &__burger {
+    display: none;
+
+    @include onTablet {
+      display: block;
+    }
+  }
+
   //HEADER WELCOME
 
   &__welcome {
@@ -28,7 +39,6 @@
     margin-bottom: 170px;
 
     @include onTablet {
-      height: 336px;
       margin-bottom: 140px;
     }
 
