--- a/src/styles/blocks/_mobile-nav-button.scss
+++ b/src/styles/blocks/_mobile-nav-button.scss
@@ -8,7 +8,7 @@
   z-index: 999;
   width: 40px;
   height: 30px;
-  display: none;
+  // display: none;
   justify-content: center;
   align-items: center;
 
